Attempt to optimise docker image size - debug 19